tests/ui/invalid-compile-flags/print-crate-name-request-malformed-crate-name.stderr
error[E0539]: expected a quoted string literal
  --> $DIR/print-crate-name-request-malformed-crate-name.rs:5:1
   |
LL | #![crate_name = concat!("wrapped")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
